// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: BasicOptions should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Basic Options"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Basic Options
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: BlackTheme should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#080808",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show ActionSheet (black theme)"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#3976D1",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show ActionSheet (black theme)
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: CustomChildrenWithSnaps should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Custom Children with Snaps"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Custom Children with Snaps
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: CustomHeader should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show with Custom Header"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show with Custom Header
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: DangerOptions should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Danger Options"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Danger Options
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: DarkTheme should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#1A1E23",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show ActionSheet (dark theme)"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#095AD2",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show ActionSheet (dark theme)
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: DisabledOptions should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Disabled Options"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Disabled Options
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: LightTheme should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show ActionSheet (light theme)"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show ActionSheet (light theme)
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: LongOptionsList should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Long Options List"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Long Options List
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: MixedStates should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Mixed States"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Mixed States
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: OnCloseCallback should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show with onClose Callback"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show with onClose Callback
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: OptionsWithCancelButton should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Options with Cancel"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Options with Cancel
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: OptionsWithIcons should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Options with Icons"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Options with Icons
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: OptionsWithRightComponents should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Options with Right Components"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Options with Right Components
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: OptionsWithSubtitles should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Options with Subtitles"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Options with Subtitles
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: WithSupportedVersionsWarning should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Supported Versions Warning"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Supported Versions Warning
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;
